--- a/src/components/NavBar/NavBar.css
+++ b/src/components/NavBar/NavBar.css
@@ -2,7 +2,8 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 20px 10px;
+    padding: 0px 10px;
+    height: 10vh;
     border-bottom: 1px black solid;
     
 }
@@ -68,7 +69,7 @@
         display: flex;
         align-items: center;
         justify-content: center;
-        height: 15vh;
+        height: 10vh;
         background-color: #555555;
     }
 
