--- a/src/components/button.css
+++ b/src/components/button.css
@@ -1,5 +1,10 @@
-.detail{
-  height: 75vh;
+.container{
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  height: 80vh;
+  overflow: auto;
+
 }
 
 .buttonContainer{
@@ -22,7 +27,7 @@
 
 
 .button {
-  margin: 0 20px;
+  margin: 20px;
   align-items: center;
   appearance: none;
   background-color: #fff;
